Several Updates: - Fixed issue feedback needing to be available if chart selected before data. - Hiding make changes and clear values initially before selecting a chart option - Added a grid view to the edit mode for easier alignment of multiple elements - Added the ability to delete a layout - Formatted according to black standard

--- a/assets/custom.css
+++ b/assets/custom.css
@@ -81,11 +81,11 @@ body {
     box-shadow:5px 2px 10px black;
 }
 
-#design-holder #openDesignEditor,  #design-holder #saveLayout {
+#design-holder #openDesignEditor,  #design-holder #saveLayout, #design-holder #deleteLayout {
     display: none
 }
 
-#design-holder.edit #openDesignEditor, #design-holder.edit #saveLayout {
+#design-holder.edit #openDesignEditor, #design-holder.edit #saveLayout, #design-holder.edit #deleteLayout {
     display: initial
 }
 
@@ -125,4 +125,11 @@ body {
     border-radius: 5px;
     display: flex;
     justify-content: center;
+}
+
+#design-area.edit {
+  background-size: 50px 50px;
+  background-image:
+    linear-gradient(to right, rgba(0,0,0,0.125) 1px, transparent 1px),
+    linear-gradient(to bottom, rgba(0,0,0,0.125) 1px, transparent 1px);
 }
